--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
